# recipe-app-api

./: .gitignore  .travis.yml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_command.py  test_models.py
app/user/: serializers.py  urls.py
app/user/tests/: test_users_api.py
