[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Daniel Freire <danielbfr3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
djangorestframework = "^3.11.2"
flake8 = "^3.8.3"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
